# tad-mctc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  environment.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yaml  macos-arm.yaml  macos-x86.yaml  macos.yaml  python.yaml  python.yml  release.yaml  ubuntu.yaml  windows.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt
docs/modules/: _typing.rst  index.rst
docs/modules/autograd/: index.rst
docs/modules/batch/: agnostic.rst  index.rst  mask.rst
docs/modules/data/: en.rst  getters.rst  index.rst  molecules.rst  pse.rst  radii.rst  zeff.rst
docs/modules/exceptions/: index.rst  io.rst  molecule.rst
docs/modules/io/: index.rst
docs/modules/math/: index.rst
docs/modules/molecule/: bond.rst  geometry.rst  index.rst  property.rst
docs/modules/ncoord/: count.rst  d3.rst  defaults.rst  index.rst
docs/modules/storch/: linalg.rst  utils.rst
docs/modules/tools/: index.rst
docs/modules/typing/: builtin.rst  compat.rst  index.rst  pytorch.rst
docs/modules/units/: codata.rst  energy.rst  index.rst  mass.rst  math.rst  time.rst
docs/source/: conf.py  index.rst  installation.rst
docs/source/modules/: index.rst
examples/: cn-batch.py  cn-single.py  molecule.py
examples/cn/: batch.py  single.py
examples/read/: co2.xyz  turbomole.py  xyz.py
examples/write/: turbomole.py  xyz.py
src/tad_mctc/: __init__.py  __version__.py  _typing.py  _version.py
src/tad_mctc/autograd/: __init__.py  batched.py  checks.py  compat.py  gradcheck.py  hessian.py  internals.py  jac.py  nonfunctorch.py
src/tad_mctc/batch/: __init__.py  agnostic.py  mask.py  merging.py  pack.py  packing.py  sorting.py  unpack.py  unpacking.py
src/tad_mctc/convert/: __init__.py  numpy.py  pse.py  pytorch.py  tensor.py
src/tad_mctc/data/: __init__.py  en.py  getters.py  hardness.py  mass.py  molecules.py  pse.py  radii.py  zeff.py
src/tad_mctc/exceptions/: __init__.py  io.py  molecule.py  pytorch.py
src/tad_mctc/io/: __init__.py
src/tad_mctc/math/: __init__.py  einsum.py
src/tad_mctc/molecule/: __init__.py  bond.py  container.py  geometry.py  property.py
src/tad_mctc/ncoord/: __init__.py  common.py  count.py  d3.py  d4.py  defaults.py  eeq.py  gfn2.py  typing.py
src/tad_mctc/storch/: __init__.py  distance.py  elemental.py  linalg.py  utils.py
src/tad_mctc/tools/: __init__.py  caching.py  memory.py
src/tad_mctc/typing/: __init__.py  builtin.py  compat.py  pytorch.py
src/tad_mctc/units/: __init__.py  codata.py  energy.py  length.py  mass.py  math.py  spectroscopy.py  time.py
test/: __init__.py  conftest.py  molecules.py  utils.py
test/test_autograd/: test_batch.py  test_checks.py  test_hessian.py  test_jac.py  test_jac_compat.py  test_nonfunctorch.py
test/test_batch/: test_agnostic.py  test_deflate.py  test_merge.py  test_pack.py  test_real.py  test_sort.py  test_unpack.py
test/test_batch/test_mask/: test_atoms.py  test_pairs.py  test_triples.py
test/test_convert/: test_numpy.py  test_pse.py  test_pytorch.py  test_tensor.py
test/test_data/: __init__.py  test_constants.py  test_getters.py
test/test_io/: test_checks.py  test_coord.py  test_deflatable.py  test_dotfiles.py  test_orca.py  test_qcschema.py  test_qm9.py  test_reader.py  test_tblite.py  test_turbomole.py  test_writer.py  test_xyz.py
test/test_io/fail/: coord  energy2  nat-no-digit.xyz
test/test_io/files/: qm9.xyz
test/test_math/: test_einsum.py
test/test_misc/: test_version_tuple.py
test/test_molecule/: test_geometry.py  test_property.py  test_property_inertia.py  test_property_masscenter.py  test_property_rotconst.py
test/test_molecule/test_bond/: samples.py  test_mols.py  test_plain.py
test/test_molecule/test_container/: test_memoize.py  test_properties.py  test_read.py
test/test_molecule/test_molecule/: test_general.py  test_mol.py
test/test_molecule/test_property/: test_inertia.py  test_mass_center.py  test_rotconst.py
test/test_ncoord/: __init__.py  samples.py  test_cn_d3.py  test_cn_d4.py  test_cn_eeq.py  test_cn_gfn2.py  test_general.py  test_grad.py  utils.py
test/test_ncoord/test_grad/: test_analytical.py  test_autodiff.py  test_count.py  test_jacobian.py  test_ref.py
test/test_storch/: test_cdist.py  test_eighb.py  test_elemental.py  test_linalg.py
test/test_tools/: __init__.py  test_caching.py  test_memory.py
test/test_tools/test_caching/: test_instances.py  test_slots.py
(+71 files in other folders)
