[metadata]
name = tad_mctc
version = attr: tad_mctc._version.__version__
description = Torch Autodiff Utility
long_description = file: README.md
long_description_content_type = text/markdown
author = "Marvin Friede"
license = Apache-2.0
license_files = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy
    opt-einsum
    scipy
    torch>=1.11
    typing-extensions
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    covdefaults
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    scipy
    tox
tox =
    covdefaults
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    scipy

[options.package_data]
tad_mctc =
    py.typed
    **/*.npy
    **/*.npz
